# Meeting-Summary-Bot

./: .env.example  .gitignore  README.md  checklist.md  prompt.md  pyproject.toml  requirements.txt  user-guide.md
src/meeting_summarizer/: __init__.py  audio.py  chunking.py  cli.py  config.py  render.py  schemas.py  summarize.py  transcribe.py
tests/: test_audio.py  test_chunking.py  test_render.py  test_schemas.py  test_transcribe.py
